POST Endpoint /results created Tests, clean exception handling and refactoring are still missing